[gd_scene load_steps=18 format=1]

[ext_resource path="res://minigames/Gandhi_Simulator/Main.gd" type="Script" id=1]
[ext_resource path="res://minigames/Gandhi_Simulator/Gandhi-simulator_original/Soldado.gd" type="Script" id=2]
[ext_resource path="res://minigames/Gandhi_Simulator/Gandhi-simulator_original/Personagens/Soldado1.png" type="Texture" id=3]
[ext_resource path="res://minigames/Gandhi_Simulator/Gandhi-simulator_original/Personagens/Churchill.png" type="Texture" id=4]
[ext_resource path="res://minigames/Gandhi_Simulator/Gandhi-simulator_original/Gandhi.gd" type="Script" id=5]
[ext_resource path="res://minigames/Gandhi_Simulator/Gandhi-simulator_original/Personagens/Gandhi1.png" type="Texture" id=6]
[ext_resource path="res://minigames/Gandhi_Simulator/Gandhi-simulator_original/Pontuacoes.gd" type="Script" id=7]
[ext_resource path="res://minigames/Gandhi_Simulator/india_background.jpg" type="Texture" id=8]


[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 12.7517, 37.1809 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 12.7517, 37.1809 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 26.2591, 49.5634 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 16.5363, 24.098 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 19.7559, 26.4591 )

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 365.048, 10 )

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 10, 210.465 )

[sub_resource type="RectangleShape2D" id=8]

custom_solver_bias = 0.0
extents = Vector2( 334.288, 10 )

[sub_resource type="RectangleShape2D" id=9]

custom_solver_bias = 0.0
extents = Vector2( 10, 202.29 )

[node name="Main" type="Node2D"]

script/script = ExtResource( 1 )
NAME = "Gandhi_Simulator"
INSTRUCTION = "Run Away"
DURATION = 8
TIMEOUT_WIN = true
USE_KEYS_HUD = true
USE_MOUSE_HUD = false

[node name="Node2D" type="Node2D" parent="."]

[node name="Soldado" type="KinematicBody2D" parent="Node2D"]

editor/display_folded = true
transform/pos = Vector2( 125.657, 55.6451 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 2.92551, 19.7455 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Node2D/Soldado"]

transform/pos = Vector2( 2.79195, 21.7276 )
transform/scale = Vector2( 0.0796268, 0.0647667 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Soldado"]

transform/pos = Vector2( 2.92551, 19.7455 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Soldado1" type="KinematicBody2D" parent="Node2D"]

editor/display_folded = true
transform/pos = Vector2( 529.731, 57.8503 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 2.92551, 19.7455 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Node2D/Soldado1"]

transform/pos = Vector2( 2.79195, 21.7276 )
transform/scale = Vector2( 0.0796268, 0.0647667 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Soldado1"]

transform/pos = Vector2( 2.92551, 19.7455 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Soldado2" type="KinematicBody2D" parent="Node2D"]

editor/display_folded = true
transform/pos = Vector2( 312.193, 29.798 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 2.92551, 19.7455 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Node2D/Soldado2"]

transform/pos = Vector2( 2.79195, 21.7276 )
transform/scale = Vector2( 0.0796268, 0.0647667 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Soldado2"]

transform/pos = Vector2( 2.92551, 19.7455 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Soldado3" type="KinematicBody2D" parent="Node2D"]

editor/display_folded = true
transform/pos = Vector2( 140.814, 225.673 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 2.92551, 19.7455 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Node2D/Soldado3"]

transform/pos = Vector2( 2.79195, 21.7276 )
transform/scale = Vector2( 0.0796268, 0.0647667 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Soldado3"]

transform/pos = Vector2( 2.92551, 19.7455 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Soldado4" type="KinematicBody2D" parent="Node2D"]

editor/display_folded = true
transform/pos = Vector2( 469.124, 221.812 )
input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 2.92551, 19.7455 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Node2D/Soldado4"]

transform/pos = Vector2( 2.79195, 21.7276 )
transform/scale = Vector2( 0.0796268, 0.0647667 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Soldado4"]

transform/pos = Vector2( 2.92551, 19.7455 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="Churchill" type="KinematicBody2D" parent="Node2D"]

editor/display_folded = true
transform/pos = Vector2( 307.092, 132.635 )
input/pickable = false
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 10.7091, 38.9051 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Node2D/Churchill"]

transform/pos = Vector2( 14.5283, 36.6 )
transform/scale = Vector2( 0.112228, 0.0880048 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Churchill"]

transform/pos = Vector2( 10.7091, 38.9051 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="Gandhi" type="KinematicBody2D" parent="Node2D"]

transform/pos = Vector2( 319.886, 340.748 )
input/pickable = false
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 2.79034, 19.7468 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="Node2D/Gandhi"]

transform/pos = Vector2( 1.55856, 11.866 )
transform/scale = Vector2( 0.0676009, 0.0592323 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Gandhi"]

transform/pos = Vector2( 2.79034, 19.7468 )
shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="Area2D" type="Area2D" parent="Node2D/Gandhi"]

input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 3.00494, 19.5321 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Gandhi/Area2D"]

transform/pos = Vector2( 3.00494, 19.5321 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 0
script/script = ExtResource( 7 )

[node name="TextureFrame" type="TextureFrame" parent="Node2D"]

visibility/behind_parent = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 642.0
margin/bottom = 399.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 0

[node name="StaticBody2D" type="StaticBody2D" parent="."]

transform/pos = Vector2( 258.878, -40.0844 )
input/pickable = false
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 27.018, 29.1794 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]

transform/pos = Vector2( 27.018, 29.1794 )
shape = SubResource( 6 )
trigger = false
_update_shape_index = 0

[node name="StaticBody2D1" type="StaticBody2D" parent="."]

transform/pos = Vector2( 729.869, 141.965 )
input/pickable = false
shapes/0/shape = SubResource( 7 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -79.2646, 67.9999 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D1"]

transform/pos = Vector2( -79.2646, 67.9999 )
shape = SubResource( 7 )
trigger = false
_update_shape_index = 0

[node name="StaticBody2D2" type="StaticBody2D" parent="."]

transform/pos = Vector2( 330.696, 497.714 )
input/pickable = false
shapes/0/shape = SubResource( 8 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -24.4351, -87.0997 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]

transform/pos = Vector2( -24.4351, -87.0997 )
shape = SubResource( 8 )
trigger = false
_update_shape_index = 0

[node name="StaticBody2D3" type="StaticBody2D" parent="."]

transform/pos = Vector2( -95.201, 185.39 )
input/pickable = false
shapes/0/shape = SubResource( 9 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 85.0293, 14.7613 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]

transform/pos = Vector2( 85.0293, 14.7613 )
shape = SubResource( 9 )
trigger = false
_update_shape_index = 0

[connection signal="body_enter" from="Node2D/Gandhi/Area2D" to="Node2D/Gandhi/Area2D/CollisionShape2D" method="_on_Area2D_body_enter"]


